# divedock

./: .gitignore  README.md  index.html  package-lock.json  package.json  styles.css  tsconfig.json
app/: page.tsx
app/components/: AudioVisualizer.tsx  HalMicVisualizer.tsx
app/components/icons/: LoadingIcon.tsx  MicOff.tsx  MicOffIcon.tsx  MicOn.tsx  MicOnIcon.tsx
app/components/visualizer/: AudioVisualizer.tsx
app/hooks/: transcriber.worker.js  useAudioDetection.ts  useDetection.ts  usePlayer.ts  useSynthesis.ts  useTranscriber.ts  useTranscription.ts  useWorker.ts  worker.js
app/lib/: constants.ts  permissions.ts  transcribe.ts  usePlayer.ts
public/: transcriber.worker.js
src/: audio-visual.ts  audio.ts  audioController.ts  audioVisualizer.ts  main.ts  styles.css  synthesize.ts  transcribe.ts  tts.ts  visualize.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  bs1770.rs  lib.rs  main.rs  sound.rs  synthesize.rs  transcribe.rs
src/controllers/: AudioController.ts
src/services/: SpeechSynth.ts
src/ui/: AudioController.ts  AudioVisualizer.ts
src/utils/: realtime.ts  synthesize.ts  transcribe.ts
