[package]
name = "divedock"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "divedock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
anyhow       = "1"
kalosm = { version = "0.4.0", features = ["sound", "metal"] }
tauri = { version = "2.5.1", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-opener = "2.2.6"
tokio-stream = "0.1"
once_cell = "1"

# Parler-TTS dependencies
hf-hub = "0.12"
tokenizers = "0.13"
serde_json = "1.0"
rodio = "0.17"
candle = { git = "https://github.com/huggingface/candle.git", package = "candle", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", package = "candle-nn" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", package = "candle-transformers" }

