[package]
name = "divedock"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "divedock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
anyhow       = "1"
candle-core = { version = "0.9.1", features = ["metal"]}
candle-nn = { version = "0.9.1", features = ["metal"]}
candle-transformers = { version = "0.9.1", features = ["metal"]}
hf-hub = "0.4.2"
kalosm = { version = "0.4.0", features = ["sound", "metal"] }
once_cell = "1.21.3"
rodio = "0.20.1"
serde_json = "1.0.140"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-opener = "2.2.6"
tokenizers = "0.21.1"
tokio-stream = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

